parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    TRUE
    FALSE

Grammar

Rule 0     S' -> program
Rule 1     program -> more_vars more_func main
Rule 2     more_vars -> vars
Rule 3     more_vars -> <empty>
Rule 4     vars -> var_type vars_aux SEMICOLON more_vars
Rule 5     var_type -> BOOL
Rule 6     var_type -> INT
Rule 7     var_type -> DOUBLE
Rule 8     vars_aux -> ID arr var_assign more_vars_aux
Rule 9     var_assign -> EQUALS var_cte
Rule 10    var_assign -> <empty>
Rule 11    more_vars_aux -> COMMA vars_aux
Rule 12    more_vars_aux -> <empty>
Rule 13    arr -> LSQRTBRACKET const RSQRTBRACKET arr
Rule 14    arr -> <empty>
Rule 15    var_cte -> CTEINT
Rule 16    var_cte -> CTEDOUBLE
Rule 17    var_cte -> CTEBOOL
Rule 18    var_cte -> ID arr
Rule 19    var_cte -> func_call
Rule 20    const -> CTEINT
Rule 21    const -> CTEDOUBLE
Rule 22    const -> CTEBOOL
Rule 23    more_func -> func
Rule 24    more_func -> <empty>
Rule 25    func -> FUNC func_type ID LPAR arguments RPAR func_block more_func
Rule 26    func_type -> VOID
Rule 27    func_type -> BOOL
Rule 28    func_type -> INT
Rule 29    func_type -> DOUBLE
Rule 30    arguments -> var_type ID more_args
Rule 31    arguments -> <empty>
Rule 32    more_args -> COMMA var_type ID more_args
Rule 33    more_args -> <empty>
Rule 34    func_block -> LBRACKET more_vars more_statement optional_return RBRACKET
Rule 35    optional_return -> RETURN exp SEMICOLON
Rule 36    optional_return -> <empty>
Rule 37    more_statement -> statement more_statement
Rule 38    more_statement -> <empty>
Rule 39    statement -> read
Rule 40    statement -> write
Rule 41    statement -> cicle
Rule 42    statement -> condition
Rule 43    statement -> assignation
Rule 44    statement -> func_call SEMICOLON
Rule 45    read -> READ LPAR ID arr_par RPAR SEMICOLON
Rule 46    write -> WRITE LPAR exp RPAR SEMICOLON
Rule 47    cicle -> WHILE LPAR expression RPAR block
Rule 48    condition -> IF LPAR expression RPAR block else_posible
Rule 49    else_posible -> ELSE block
Rule 50    else_posible -> <empty>
Rule 51    assignation -> ID arr_par EQUALS assign SEMICOLON
Rule 52    assign -> expression
Rule 53    assign -> func_call
Rule 54    func_call -> ID LPAR params RPAR
Rule 55    params -> exp more_params
Rule 56    params -> <empty>
Rule 57    more_params -> COMMA exp more_params
Rule 58    more_params -> <empty>
Rule 59    block -> LBRACKET more_statement RBRACKET
Rule 60    arr_par -> LSQRTBRACKET exp RSQRTBRACKET arr_par
Rule 61    arr_par -> <empty>
Rule 62    expression -> conc expression_aux
Rule 63    expression_aux -> ao conc expression_aux
Rule 64    expression_aux -> <empty>
Rule 65    conc -> exp conc_aux
Rule 66    conc_aux -> comp exp
Rule 67    conc_aux -> <empty>
Rule 68    exp -> term exp_aux
Rule 69    exp_aux -> pl term exp_aux
Rule 70    exp_aux -> <empty>
Rule 71    term -> factor term_aux
Rule 72    term_aux -> dm factor term_aux
Rule 73    term_aux -> <empty>
Rule 74    factor -> LPAR expression RPAR
Rule 75    factor -> var_cte
Rule 76    ao -> AND
Rule 77    ao -> OR
Rule 78    comp -> GREATER
Rule 79    comp -> LESS
Rule 80    comp -> GREATEROREQUAL
Rule 81    comp -> LESSOREQUAL
Rule 82    comp -> EQUALEQUALS
Rule 83    comp -> DIFFERENT
Rule 84    pl -> PLUS
Rule 85    pl -> MINUS
Rule 86    dm -> MULTIPLICATION
Rule 87    dm -> DIVISION
Rule 88    dm -> MOD
Rule 89    main -> MAIN main_block
Rule 90    main_block -> LBRACKET more_vars more_statement RBRACKET

Terminals, with rules where they appear

AND                  : 76
BOOL                 : 5 27
COMMA                : 11 32 57
CTEBOOL              : 17 22
CTEDOUBLE            : 16 21
CTEINT               : 15 20
DIFFERENT            : 83
DIVISION             : 87
DOUBLE               : 7 29
ELSE                 : 49
EQUALEQUALS          : 82
EQUALS               : 9 51
FALSE                : 
FUNC                 : 25
GREATER              : 78
GREATEROREQUAL       : 80
ID                   : 8 18 25 30 32 45 51 54
IF                   : 48
INT                  : 6 28
LBRACKET             : 34 59 90
LESS                 : 79
LESSOREQUAL          : 81
LPAR                 : 25 45 46 47 48 54 74
LSQRTBRACKET         : 13 60
MAIN                 : 89
MINUS                : 85
MOD                  : 88
MULTIPLICATION       : 86
OR                   : 77
PLUS                 : 84
RBRACKET             : 34 59 90
READ                 : 45
RETURN               : 35
RPAR                 : 25 45 46 47 48 54 74
RSQRTBRACKET         : 13 60
SEMICOLON            : 4 35 44 45 46 51
TRUE                 : 
VOID                 : 26
WHILE                : 47
WRITE                : 46
error                : 

Nonterminals, with rules where they appear

ao                   : 63
arguments            : 25
arr                  : 8 13 18
arr_par              : 45 51 60
assign               : 51
assignation          : 43
block                : 47 48 49
cicle                : 41
comp                 : 66
conc                 : 62 63
conc_aux             : 65
condition            : 42
const                : 13
dm                   : 72
else_posible         : 48
exp                  : 35 46 55 57 60 65 66
exp_aux              : 68 69
expression           : 47 48 52 74
expression_aux       : 62 63
factor               : 71 72
func                 : 23
func_block           : 25
func_call            : 19 44 53
func_type            : 25
main                 : 1
main_block           : 89
more_args            : 30 32
more_func            : 1 25
more_params          : 55 57
more_statement       : 34 37 59 90
more_vars            : 1 4 34 90
more_vars_aux        : 8
optional_return      : 34
params               : 54
pl                   : 69
program              : 0
read                 : 39
statement            : 37
term                 : 68 69
term_aux             : 71 72
var_assign           : 8
var_cte              : 9 75
var_type             : 4 30 32
vars                 : 2
vars_aux             : 4 11
write                : 40

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . more_vars more_func main
    (2) more_vars -> . vars
    (3) more_vars -> .
    (4) vars -> . var_type vars_aux SEMICOLON more_vars
    (5) var_type -> . BOOL
    (6) var_type -> . INT
    (7) var_type -> . DOUBLE

    FUNC            reduce using rule 3 (more_vars -> .)
    MAIN            reduce using rule 3 (more_vars -> .)
    BOOL            shift and go to state 6
    INT             shift and go to state 3
    DOUBLE          shift and go to state 4

    vars                           shift and go to state 1
    var_type                       shift and go to state 2
    program                        shift and go to state 5
    more_vars                      shift and go to state 7

state 1

    (2) more_vars -> vars .

    FUNC            reduce using rule 2 (more_vars -> vars .)
    MAIN            reduce using rule 2 (more_vars -> vars .)
    READ            reduce using rule 2 (more_vars -> vars .)
    WRITE           reduce using rule 2 (more_vars -> vars .)
    WHILE           reduce using rule 2 (more_vars -> vars .)
    IF              reduce using rule 2 (more_vars -> vars .)
    ID              reduce using rule 2 (more_vars -> vars .)
    RETURN          reduce using rule 2 (more_vars -> vars .)
    RBRACKET        reduce using rule 2 (more_vars -> vars .)


state 2

    (4) vars -> var_type . vars_aux SEMICOLON more_vars
    (8) vars_aux -> . ID arr var_assign more_vars_aux

    ID              shift and go to state 9

    vars_aux                       shift and go to state 8

state 3

    (6) var_type -> INT .

    ID              reduce using rule 6 (var_type -> INT .)


state 4

    (7) var_type -> DOUBLE .

    ID              reduce using rule 7 (var_type -> DOUBLE .)


state 5

    (0) S' -> program .



state 6

    (5) var_type -> BOOL .

    ID              reduce using rule 5 (var_type -> BOOL .)


state 7

    (1) program -> more_vars . more_func main
    (23) more_func -> . func
    (24) more_func -> .
    (25) func -> . FUNC func_type ID LPAR arguments RPAR func_block more_func

    MAIN            reduce using rule 24 (more_func -> .)
    FUNC            shift and go to state 12

    more_func                      shift and go to state 11
    func                           shift and go to state 10

state 8

    (4) vars -> var_type vars_aux . SEMICOLON more_vars

    SEMICOLON       shift and go to state 13


state 9

    (8) vars_aux -> ID . arr var_assign more_vars_aux
    (13) arr -> . LSQRTBRACKET const RSQRTBRACKET arr
    (14) arr -> .

    LSQRTBRACKET    shift and go to state 15
    EQUALS          reduce using rule 14 (arr -> .)
    COMMA           reduce using rule 14 (arr -> .)
    SEMICOLON       reduce using rule 14 (arr -> .)

    arr                            shift and go to state 14

state 10

    (23) more_func -> func .

    MAIN            reduce using rule 23 (more_func -> func .)


state 11

    (1) program -> more_vars more_func . main
    (89) main -> . MAIN main_block

    MAIN            shift and go to state 16

    main                           shift and go to state 17

state 12

    (25) func -> FUNC . func_type ID LPAR arguments RPAR func_block more_func
    (26) func_type -> . VOID
    (27) func_type -> . BOOL
    (28) func_type -> . INT
    (29) func_type -> . DOUBLE

    VOID            shift and go to state 20
    BOOL            shift and go to state 22
    INT             shift and go to state 21
    DOUBLE          shift and go to state 19

    func_type                      shift and go to state 18

state 13

    (4) vars -> var_type vars_aux SEMICOLON . more_vars
    (2) more_vars -> . vars
    (3) more_vars -> .
    (4) vars -> . var_type vars_aux SEMICOLON more_vars
    (5) var_type -> . BOOL
    (6) var_type -> . INT
    (7) var_type -> . DOUBLE

    FUNC            reduce using rule 3 (more_vars -> .)
    MAIN            reduce using rule 3 (more_vars -> .)
    READ            reduce using rule 3 (more_vars -> .)
    WRITE           reduce using rule 3 (more_vars -> .)
    WHILE           reduce using rule 3 (more_vars -> .)
    IF              reduce using rule 3 (more_vars -> .)
    ID              reduce using rule 3 (more_vars -> .)
    RBRACKET        reduce using rule 3 (more_vars -> .)
    RETURN          reduce using rule 3 (more_vars -> .)
    BOOL            shift and go to state 6
    INT             shift and go to state 3
    DOUBLE          shift and go to state 4

    vars                           shift and go to state 1
    more_vars                      shift and go to state 23
    var_type                       shift and go to state 2

state 14

    (8) vars_aux -> ID arr . var_assign more_vars_aux
    (9) var_assign -> . EQUALS var_cte
    (10) var_assign -> .

    EQUALS          shift and go to state 24
    COMMA           reduce using rule 10 (var_assign -> .)
    SEMICOLON       reduce using rule 10 (var_assign -> .)

    var_assign                     shift and go to state 25

state 15

    (13) arr -> LSQRTBRACKET . const RSQRTBRACKET arr
    (20) const -> . CTEINT
    (21) const -> . CTEDOUBLE
    (22) const -> . CTEBOOL

    CTEINT          shift and go to state 29
    CTEDOUBLE       shift and go to state 26
    CTEBOOL         shift and go to state 28

    const                          shift and go to state 27

state 16

    (89) main -> MAIN . main_block
    (90) main_block -> . LBRACKET more_vars more_statement RBRACKET

    LBRACKET        shift and go to state 31

    main_block                     shift and go to state 30

state 17

    (1) program -> more_vars more_func main .

    $end            reduce using rule 1 (program -> more_vars more_func main .)


state 18

    (25) func -> FUNC func_type . ID LPAR arguments RPAR func_block more_func

    ID              shift and go to state 32


state 19

    (29) func_type -> DOUBLE .

    ID              reduce using rule 29 (func_type -> DOUBLE .)


state 20

    (26) func_type -> VOID .

    ID              reduce using rule 26 (func_type -> VOID .)


state 21

    (28) func_type -> INT .

    ID              reduce using rule 28 (func_type -> INT .)


state 22

    (27) func_type -> BOOL .

    ID              reduce using rule 27 (func_type -> BOOL .)


state 23

    (4) vars -> var_type vars_aux SEMICOLON more_vars .

    READ            reduce using rule 4 (vars -> var_type vars_aux SEMICOLON more_vars .)
    WRITE           reduce using rule 4 (vars -> var_type vars_aux SEMICOLON more_vars .)
    WHILE           reduce using rule 4 (vars -> var_type vars_aux SEMICOLON more_vars .)
    IF              reduce using rule 4 (vars -> var_type vars_aux SEMICOLON more_vars .)
    ID              reduce using rule 4 (vars -> var_type vars_aux SEMICOLON more_vars .)
    RBRACKET        reduce using rule 4 (vars -> var_type vars_aux SEMICOLON more_vars .)
    RETURN          reduce using rule 4 (vars -> var_type vars_aux SEMICOLON more_vars .)
    FUNC            reduce using rule 4 (vars -> var_type vars_aux SEMICOLON more_vars .)
    MAIN            reduce using rule 4 (vars -> var_type vars_aux SEMICOLON more_vars .)


state 24

    (9) var_assign -> EQUALS . var_cte
    (15) var_cte -> . CTEINT
    (16) var_cte -> . CTEDOUBLE
    (17) var_cte -> . CTEBOOL
    (18) var_cte -> . ID arr
    (19) var_cte -> . func_call
    (54) func_call -> . ID LPAR params RPAR

    CTEINT          shift and go to state 36
    CTEDOUBLE       shift and go to state 33
    CTEBOOL         shift and go to state 35
    ID              shift and go to state 38

    func_call                      shift and go to state 34
    var_cte                        shift and go to state 37

state 25

    (8) vars_aux -> ID arr var_assign . more_vars_aux
    (11) more_vars_aux -> . COMMA vars_aux
    (12) more_vars_aux -> .

    COMMA           shift and go to state 40
    SEMICOLON       reduce using rule 12 (more_vars_aux -> .)

    more_vars_aux                  shift and go to state 39

state 26

    (21) const -> CTEDOUBLE .

    RSQRTBRACKET    reduce using rule 21 (const -> CTEDOUBLE .)


state 27

    (13) arr -> LSQRTBRACKET const . RSQRTBRACKET arr

    RSQRTBRACKET    shift and go to state 41


state 28

    (22) const -> CTEBOOL .

    RSQRTBRACKET    reduce using rule 22 (const -> CTEBOOL .)


state 29

    (20) const -> CTEINT .

    RSQRTBRACKET    reduce using rule 20 (const -> CTEINT .)


state 30

    (89) main -> MAIN main_block .

    $end            reduce using rule 89 (main -> MAIN main_block .)


state 31

    (90) main_block -> LBRACKET . more_vars more_statement RBRACKET
    (2) more_vars -> . vars
    (3) more_vars -> .
    (4) vars -> . var_type vars_aux SEMICOLON more_vars
    (5) var_type -> . BOOL
    (6) var_type -> . INT
    (7) var_type -> . DOUBLE

    READ            reduce using rule 3 (more_vars -> .)
    WRITE           reduce using rule 3 (more_vars -> .)
    WHILE           reduce using rule 3 (more_vars -> .)
    IF              reduce using rule 3 (more_vars -> .)
    ID              reduce using rule 3 (more_vars -> .)
    RBRACKET        reduce using rule 3 (more_vars -> .)
    BOOL            shift and go to state 6
    INT             shift and go to state 3
    DOUBLE          shift and go to state 4

    var_type                       shift and go to state 2
    more_vars                      shift and go to state 42
    vars                           shift and go to state 1

state 32

    (25) func -> FUNC func_type ID . LPAR arguments RPAR func_block more_func

    LPAR            shift and go to state 43


state 33

    (16) var_cte -> CTEDOUBLE .

    MULTIPLICATION  reduce using rule 16 (var_cte -> CTEDOUBLE .)
    DIVISION        reduce using rule 16 (var_cte -> CTEDOUBLE .)
    MOD             reduce using rule 16 (var_cte -> CTEDOUBLE .)
    PLUS            reduce using rule 16 (var_cte -> CTEDOUBLE .)
    MINUS           reduce using rule 16 (var_cte -> CTEDOUBLE .)
    COMMA           reduce using rule 16 (var_cte -> CTEDOUBLE .)
    RPAR            reduce using rule 16 (var_cte -> CTEDOUBLE .)
    GREATER         reduce using rule 16 (var_cte -> CTEDOUBLE .)
    LESS            reduce using rule 16 (var_cte -> CTEDOUBLE .)
    GREATEROREQUAL  reduce using rule 16 (var_cte -> CTEDOUBLE .)
    LESSOREQUAL     reduce using rule 16 (var_cte -> CTEDOUBLE .)
    EQUALEQUALS     reduce using rule 16 (var_cte -> CTEDOUBLE .)
    DIFFERENT       reduce using rule 16 (var_cte -> CTEDOUBLE .)
    AND             reduce using rule 16 (var_cte -> CTEDOUBLE .)
    OR              reduce using rule 16 (var_cte -> CTEDOUBLE .)
    RSQRTBRACKET    reduce using rule 16 (var_cte -> CTEDOUBLE .)
    SEMICOLON       reduce using rule 16 (var_cte -> CTEDOUBLE .)


state 34

    (19) var_cte -> func_call .

    MULTIPLICATION  reduce using rule 19 (var_cte -> func_call .)
    DIVISION        reduce using rule 19 (var_cte -> func_call .)
    MOD             reduce using rule 19 (var_cte -> func_call .)
    PLUS            reduce using rule 19 (var_cte -> func_call .)
    MINUS           reduce using rule 19 (var_cte -> func_call .)
    COMMA           reduce using rule 19 (var_cte -> func_call .)
    RPAR            reduce using rule 19 (var_cte -> func_call .)
    GREATER         reduce using rule 19 (var_cte -> func_call .)
    LESS            reduce using rule 19 (var_cte -> func_call .)
    GREATEROREQUAL  reduce using rule 19 (var_cte -> func_call .)
    LESSOREQUAL     reduce using rule 19 (var_cte -> func_call .)
    EQUALEQUALS     reduce using rule 19 (var_cte -> func_call .)
    DIFFERENT       reduce using rule 19 (var_cte -> func_call .)
    AND             reduce using rule 19 (var_cte -> func_call .)
    OR              reduce using rule 19 (var_cte -> func_call .)
    RSQRTBRACKET    reduce using rule 19 (var_cte -> func_call .)
    SEMICOLON       reduce using rule 19 (var_cte -> func_call .)


state 35

    (17) var_cte -> CTEBOOL .

    MULTIPLICATION  reduce using rule 17 (var_cte -> CTEBOOL .)
    DIVISION        reduce using rule 17 (var_cte -> CTEBOOL .)
    MOD             reduce using rule 17 (var_cte -> CTEBOOL .)
    PLUS            reduce using rule 17 (var_cte -> CTEBOOL .)
    MINUS           reduce using rule 17 (var_cte -> CTEBOOL .)
    COMMA           reduce using rule 17 (var_cte -> CTEBOOL .)
    RPAR            reduce using rule 17 (var_cte -> CTEBOOL .)
    GREATER         reduce using rule 17 (var_cte -> CTEBOOL .)
    LESS            reduce using rule 17 (var_cte -> CTEBOOL .)
    GREATEROREQUAL  reduce using rule 17 (var_cte -> CTEBOOL .)
    LESSOREQUAL     reduce using rule 17 (var_cte -> CTEBOOL .)
    EQUALEQUALS     reduce using rule 17 (var_cte -> CTEBOOL .)
    DIFFERENT       reduce using rule 17 (var_cte -> CTEBOOL .)
    AND             reduce using rule 17 (var_cte -> CTEBOOL .)
    OR              reduce using rule 17 (var_cte -> CTEBOOL .)
    RSQRTBRACKET    reduce using rule 17 (var_cte -> CTEBOOL .)
    SEMICOLON       reduce using rule 17 (var_cte -> CTEBOOL .)


state 36

    (15) var_cte -> CTEINT .

    MULTIPLICATION  reduce using rule 15 (var_cte -> CTEINT .)
    DIVISION        reduce using rule 15 (var_cte -> CTEINT .)
    MOD             reduce using rule 15 (var_cte -> CTEINT .)
    PLUS            reduce using rule 15 (var_cte -> CTEINT .)
    MINUS           reduce using rule 15 (var_cte -> CTEINT .)
    COMMA           reduce using rule 15 (var_cte -> CTEINT .)
    RPAR            reduce using rule 15 (var_cte -> CTEINT .)
    GREATER         reduce using rule 15 (var_cte -> CTEINT .)
    LESS            reduce using rule 15 (var_cte -> CTEINT .)
    GREATEROREQUAL  reduce using rule 15 (var_cte -> CTEINT .)
    LESSOREQUAL     reduce using rule 15 (var_cte -> CTEINT .)
    EQUALEQUALS     reduce using rule 15 (var_cte -> CTEINT .)
    DIFFERENT       reduce using rule 15 (var_cte -> CTEINT .)
    AND             reduce using rule 15 (var_cte -> CTEINT .)
    OR              reduce using rule 15 (var_cte -> CTEINT .)
    RSQRTBRACKET    reduce using rule 15 (var_cte -> CTEINT .)
    SEMICOLON       reduce using rule 15 (var_cte -> CTEINT .)


state 37

    (9) var_assign -> EQUALS var_cte .

    COMMA           reduce using rule 9 (var_assign -> EQUALS var_cte .)
    SEMICOLON       reduce using rule 9 (var_assign -> EQUALS var_cte .)


state 38

    (18) var_cte -> ID . arr
    (54) func_call -> ID . LPAR params RPAR
    (13) arr -> . LSQRTBRACKET const RSQRTBRACKET arr
    (14) arr -> .

    LPAR            shift and go to state 44
    LSQRTBRACKET    shift and go to state 15
    COMMA           reduce using rule 14 (arr -> .)
    SEMICOLON       reduce using rule 14 (arr -> .)
    MULTIPLICATION  reduce using rule 14 (arr -> .)
    DIVISION        reduce using rule 14 (arr -> .)
    MOD             reduce using rule 14 (arr -> .)
    PLUS            reduce using rule 14 (arr -> .)
    MINUS           reduce using rule 14 (arr -> .)
    RPAR            reduce using rule 14 (arr -> .)
    GREATER         reduce using rule 14 (arr -> .)
    LESS            reduce using rule 14 (arr -> .)
    GREATEROREQUAL  reduce using rule 14 (arr -> .)
    LESSOREQUAL     reduce using rule 14 (arr -> .)
    EQUALEQUALS     reduce using rule 14 (arr -> .)
    DIFFERENT       reduce using rule 14 (arr -> .)
    AND             reduce using rule 14 (arr -> .)
    OR              reduce using rule 14 (arr -> .)
    RSQRTBRACKET    reduce using rule 14 (arr -> .)

    arr                            shift and go to state 45

state 39

    (8) vars_aux -> ID arr var_assign more_vars_aux .

    SEMICOLON       reduce using rule 8 (vars_aux -> ID arr var_assign more_vars_aux .)


state 40

    (11) more_vars_aux -> COMMA . vars_aux
    (8) vars_aux -> . ID arr var_assign more_vars_aux

    ID              shift and go to state 9

    vars_aux                       shift and go to state 46

state 41

    (13) arr -> LSQRTBRACKET const RSQRTBRACKET . arr
    (13) arr -> . LSQRTBRACKET const RSQRTBRACKET arr
    (14) arr -> .

    LSQRTBRACKET    shift and go to state 15
    EQUALS          reduce using rule 14 (arr -> .)
    COMMA           reduce using rule 14 (arr -> .)
    SEMICOLON       reduce using rule 14 (arr -> .)
    MULTIPLICATION  reduce using rule 14 (arr -> .)
    DIVISION        reduce using rule 14 (arr -> .)
    MOD             reduce using rule 14 (arr -> .)
    PLUS            reduce using rule 14 (arr -> .)
    MINUS           reduce using rule 14 (arr -> .)
    RPAR            reduce using rule 14 (arr -> .)
    GREATER         reduce using rule 14 (arr -> .)
    LESS            reduce using rule 14 (arr -> .)
    GREATEROREQUAL  reduce using rule 14 (arr -> .)
    LESSOREQUAL     reduce using rule 14 (arr -> .)
    EQUALEQUALS     reduce using rule 14 (arr -> .)
    DIFFERENT       reduce using rule 14 (arr -> .)
    AND             reduce using rule 14 (arr -> .)
    OR              reduce using rule 14 (arr -> .)
    RSQRTBRACKET    reduce using rule 14 (arr -> .)

    arr                            shift and go to state 47

state 42

    (90) main_block -> LBRACKET more_vars . more_statement RBRACKET
    (37) more_statement -> . statement more_statement
    (38) more_statement -> .
    (39) statement -> . read
    (40) statement -> . write
    (41) statement -> . cicle
    (42) statement -> . condition
    (43) statement -> . assignation
    (44) statement -> . func_call SEMICOLON
    (45) read -> . READ LPAR ID arr_par RPAR SEMICOLON
    (46) write -> . WRITE LPAR exp RPAR SEMICOLON
    (47) cicle -> . WHILE LPAR expression RPAR block
    (48) condition -> . IF LPAR expression RPAR block else_posible
    (51) assignation -> . ID arr_par EQUALS assign SEMICOLON
    (54) func_call -> . ID LPAR params RPAR

    RBRACKET        reduce using rule 38 (more_statement -> .)
    READ            shift and go to state 48
    WRITE           shift and go to state 54
    WHILE           shift and go to state 49
    IF              shift and go to state 57
    ID              shift and go to state 55

    func_call                      shift and go to state 58
    assignation                    shift and go to state 59
    read                           shift and go to state 53
    cicle                          shift and go to state 50
    write                          shift and go to state 51
    statement                      shift and go to state 52
    more_statement                 shift and go to state 60
    condition                      shift and go to state 56

state 43

    (25) func -> FUNC func_type ID LPAR . arguments RPAR func_block more_func
    (30) arguments -> . var_type ID more_args
    (31) arguments -> .
    (5) var_type -> . BOOL
    (6) var_type -> . INT
    (7) var_type -> . DOUBLE

    RPAR            reduce using rule 31 (arguments -> .)
    BOOL            shift and go to state 6
    INT             shift and go to state 3
    DOUBLE          shift and go to state 4

    var_type                       shift and go to state 61
    arguments                      shift and go to state 62

state 44

    (54) func_call -> ID LPAR . params RPAR
    (55) params -> . exp more_params
    (56) params -> .
    (68) exp -> . term exp_aux
    (71) term -> . factor term_aux
    (74) factor -> . LPAR expression RPAR
    (75) factor -> . var_cte
    (15) var_cte -> . CTEINT
    (16) var_cte -> . CTEDOUBLE
    (17) var_cte -> . CTEBOOL
    (18) var_cte -> . ID arr
    (19) var_cte -> . func_call
    (54) func_call -> . ID LPAR params RPAR

    RPAR            reduce using rule 56 (params -> .)
    LPAR            shift and go to state 63
    CTEINT          shift and go to state 36
    CTEDOUBLE       shift and go to state 33
    CTEBOOL         shift and go to state 35
    ID              shift and go to state 38

    func_call                      shift and go to state 34
    term                           shift and go to state 64
    var_cte                        shift and go to state 68
    params                         shift and go to state 65
    exp                            shift and go to state 66
    factor                         shift and go to state 67

state 45

    (18) var_cte -> ID arr .

    MULTIPLICATION  reduce using rule 18 (var_cte -> ID arr .)
    DIVISION        reduce using rule 18 (var_cte -> ID arr .)
    MOD             reduce using rule 18 (var_cte -> ID arr .)
    PLUS            reduce using rule 18 (var_cte -> ID arr .)
    MINUS           reduce using rule 18 (var_cte -> ID arr .)
    COMMA           reduce using rule 18 (var_cte -> ID arr .)
    RPAR            reduce using rule 18 (var_cte -> ID arr .)
    GREATER         reduce using rule 18 (var_cte -> ID arr .)
    LESS            reduce using rule 18 (var_cte -> ID arr .)
    GREATEROREQUAL  reduce using rule 18 (var_cte -> ID arr .)
    LESSOREQUAL     reduce using rule 18 (var_cte -> ID arr .)
    EQUALEQUALS     reduce using rule 18 (var_cte -> ID arr .)
    DIFFERENT       reduce using rule 18 (var_cte -> ID arr .)
    AND             reduce using rule 18 (var_cte -> ID arr .)
    OR              reduce using rule 18 (var_cte -> ID arr .)
    RSQRTBRACKET    reduce using rule 18 (var_cte -> ID arr .)
    SEMICOLON       reduce using rule 18 (var_cte -> ID arr .)


state 46

    (11) more_vars_aux -> COMMA vars_aux .

    SEMICOLON       reduce using rule 11 (more_vars_aux -> COMMA vars_aux .)


state 47

    (13) arr -> LSQRTBRACKET const RSQRTBRACKET arr .

    EQUALS          reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)
    COMMA           reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)
    SEMICOLON       reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)
    MULTIPLICATION  reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)
    DIVISION        reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)
    MOD             reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)
    PLUS            reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)
    MINUS           reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)
    RPAR            reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)
    GREATER         reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)
    LESS            reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)
    GREATEROREQUAL  reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)
    LESSOREQUAL     reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)
    EQUALEQUALS     reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)
    DIFFERENT       reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)
    AND             reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)
    OR              reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)
    RSQRTBRACKET    reduce using rule 13 (arr -> LSQRTBRACKET const RSQRTBRACKET arr .)


state 48

    (45) read -> READ . LPAR ID arr_par RPAR SEMICOLON

    LPAR            shift and go to state 69


state 49

    (47) cicle -> WHILE . LPAR expression RPAR block

    LPAR            shift and go to state 70


state 50

    (41) statement -> cicle .

    READ            reduce using rule 41 (statement -> cicle .)
    WRITE           reduce using rule 41 (statement -> cicle .)
    WHILE           reduce using rule 41 (statement -> cicle .)
    IF              reduce using rule 41 (statement -> cicle .)
    ID              reduce using rule 41 (statement -> cicle .)
    RBRACKET        reduce using rule 41 (statement -> cicle .)
    RETURN          reduce using rule 41 (statement -> cicle .)


state 51

    (40) statement -> write .

    READ            reduce using rule 40 (statement -> write .)
    WRITE           reduce using rule 40 (statement -> write .)
    WHILE           reduce using rule 40 (statement -> write .)
    IF              reduce using rule 40 (statement -> write .)
    ID              reduce using rule 40 (statement -> write .)
    RBRACKET        reduce using rule 40 (statement -> write .)
    RETURN          reduce using rule 40 (statement -> write .)


state 52

    (37) more_statement -> statement . more_statement
    (37) more_statement -> . statement more_statement
    (38) more_statement -> .
    (39) statement -> . read
    (40) statement -> . write
    (41) statement -> . cicle
    (42) statement -> . condition
    (43) statement -> . assignation
    (44) statement -> . func_call SEMICOLON
    (45) read -> . READ LPAR ID arr_par RPAR SEMICOLON
    (46) write -> . WRITE LPAR exp RPAR SEMICOLON
    (47) cicle -> . WHILE LPAR expression RPAR block
    (48) condition -> . IF LPAR expression RPAR block else_posible
    (51) assignation -> . ID arr_par EQUALS assign SEMICOLON
    (54) func_call -> . ID LPAR params RPAR

    RBRACKET        reduce using rule 38 (more_statement -> .)
    RETURN          reduce using rule 38 (more_statement -> .)
    READ            shift and go to state 48
    WRITE           shift and go to state 54
    WHILE           shift and go to state 49
    IF              shift and go to state 57
    ID              shift and go to state 55

    func_call                      shift and go to state 58
    assignation                    shift and go to state 59
    read                           shift and go to state 53
    cicle                          shift and go to state 50
    write                          shift and go to state 51
    statement                      shift and go to state 52
    more_statement                 shift and go to state 71
    condition                      shift and go to state 56

state 53

    (39) statement -> read .

    READ            reduce using rule 39 (statement -> read .)
    WRITE           reduce using rule 39 (statement -> read .)
    WHILE           reduce using rule 39 (statement -> read .)
    IF              reduce using rule 39 (statement -> read .)
    ID              reduce using rule 39 (statement -> read .)
    RBRACKET        reduce using rule 39 (statement -> read .)
    RETURN          reduce using rule 39 (statement -> read .)


state 54

    (46) write -> WRITE . LPAR exp RPAR SEMICOLON

    LPAR            shift and go to state 72


state 55

    (51) assignation -> ID . arr_par EQUALS assign SEMICOLON
    (54) func_call -> ID . LPAR params RPAR
    (60) arr_par -> . LSQRTBRACKET exp RSQRTBRACKET arr_par
    (61) arr_par -> .

    LPAR            shift and go to state 44
    LSQRTBRACKET    shift and go to state 73
    EQUALS          reduce using rule 61 (arr_par -> .)

    arr_par                        shift and go to state 74

state 56

    (42) statement -> condition .

    READ            reduce using rule 42 (statement -> condition .)
    WRITE           reduce using rule 42 (statement -> condition .)
    WHILE           reduce using rule 42 (statement -> condition .)
    IF              reduce using rule 42 (statement -> condition .)
    ID              reduce using rule 42 (statement -> condition .)
    RBRACKET        reduce using rule 42 (statement -> condition .)
    RETURN          reduce using rule 42 (statement -> condition .)


state 57

    (48) condition -> IF . LPAR expression RPAR block else_posible

    LPAR            shift and go to state 75


state 58

    (44) statement -> func_call . SEMICOLON

    SEMICOLON       shift and go to state 76


state 59

    (43) statement -> assignation .
